--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -306,7 +306,7 @@ footer h2 {
     margin-bottom: 2px;
 }
 
-.fa-arrow-up-right-from-square {
+.fa-arrow-up-right-from-square, .fa-hands-bubbles, .fa-youtube {
     margin-right: 10px;
 }
 
@@ -326,6 +326,30 @@ footer a {
     margin-top: 10px;
 }
 
+.movie-secction {
+    text-align: center;
+}
+
+iframe {
+    width: 80%;
+}
+
+.movie-section-title {
+    color: aliceblue;/*文字色*/
+    padding: 0.5em;/*文字周りの余白*/
+    display: inline-block;/*おまじない*/
+    line-height: 1.3;/*行高*/
+    background: #2e86fa;/*背景色*/
+    vertical-align: middle;
+    border-radius: 25px 0px 0px 25px;/*左側の角を丸く*/
+    font-size: 20px;
+  }
+  
+.movie-section-title:before {
+    content: '●';
+    color: white;
+    margin-right: 8px;
+}
 
      
        
